// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OnboardingLayout - Snapshots > matches snapshot with complex navigation 1`] = `
<div
  class="mx-auto w-full flex-col flex container max-w-(--container-max-width) items-stretch gap-0 px-6 pt-4 pb-0 lg:min-h-0 lg:items-start lg:pb-6"
  data-testid="container"
>
  <div
    class="flex w-full flex-1 flex-col gap-0 lg:flex-none"
    data-testid="complex-nav"
  >
    <div>
      Content
    </div>
  </div>
  <div
    class="onboarding-nav mt-auto w-full lg:mt-0"
  >
    <div
      class="flex gap-4"
    >
      <button>
        Back
      </button>
      <button>
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`OnboardingLayout - Snapshots > matches snapshot with content and navigation 1`] = `
<div
  class="mx-auto w-full flex-col flex container max-w-(--container-max-width) items-stretch gap-0 px-6 pt-4 pb-0 lg:min-h-0 lg:items-start lg:pb-6"
  data-testid="container"
>
  <div
    class="flex w-full flex-1 flex-col gap-0 lg:flex-none"
    data-testid="with-navigation"
  >
    <div>
      Content with Navigation
    </div>
  </div>
  <div
    class="onboarding-nav mt-auto w-full lg:mt-0"
  >
    <button>
      Next Step
    </button>
  </div>
</div>
`;

exports[`OnboardingLayout - Snapshots > matches snapshot with multiple children 1`] = `
<div
  class="mx-auto w-full flex-col flex container max-w-(--container-max-width) items-stretch gap-0 px-6 pt-4 pb-0 lg:min-h-0 lg:items-start lg:pb-6"
  data-testid="container"
>
  <div
    class="flex w-full flex-1 flex-col gap-0 lg:flex-none"
    data-testid="multiple-children"
  >
    <header>
      Header
    </header>
    <main>
      Main Content
    </main>
    <footer>
      Footer
    </footer>
  </div>
</div>
`;

exports[`OnboardingLayout - Snapshots > matches snapshot with only content 1`] = `
<div
  class="mx-auto w-full flex-col flex container max-w-(--container-max-width) items-stretch gap-0 px-6 pt-4 pb-0 lg:min-h-0 lg:items-start lg:pb-6"
  data-testid="container"
>
  <div
    class="flex w-full flex-1 flex-col gap-0 lg:flex-none"
    data-testid="content-only"
  >
    <div>
      Simple Content
    </div>
  </div>
</div>
`;
